modification de l api GetUserOfProject
